Remove Bench configuration from std-benchmarks